# floret

./: .gitignore  Makefile  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  wandb_runner.py
python/: README.md
python/fasttext_module/fasttext/: FastText.py
python/fasttext_module/fasttext/pybind/: fasttext_pybind.cc
python/floret_module/floret/: floret.py
python/floret_module/floret/pybind/: floret_pybind.cc
python/floret_module/floret/tests/: test_train.py
src/: args.cc  args.h  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  main.cc
